Bug 1584350 - Hide urlbarView overflow. r=mak
Differential Revision: https://phabricator.services.mozilla.com/D48278

UltraBlame original commit: 940605c0ca8a00b023d568b4940844c314af3a30

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -44,6 +44,7 @@
   
   -moz-window-dragging: no-drag;
   text-shadow: none;
+  overflow: -moz-hidden-unscrollable;
 }
 
 .urlbarView.megabar {
